# pokemon-battle

./: .gitignore  Dockerfile  README.md  api.http  compose.yaml  config.docker.toml  config.toml.example  pyproject.toml
.github/workflows/: test.yaml
src/pokemon_battle/: __init__.py  api.py  battle.py  config.py  database.py  exceptions.py  main.py  models.py  pokeapi.py  protocols.py  schemas.py  services.py
tests/: __init__.py  conftest.py  test_api.py  test_battle.py  test_pokeapi.py
